# ce-uniovi-auditor-ia

./: .gitignore  CHANGELOG.md  README.md
.github/: dependabot.yml
.github/workflows/: audit.yml  bootstrap.yml  quality.yml  tests.yml
bootstrap/: source.part.00  source.part.01  source.part.02  source.part.03  source.part.04  source.part.05
docs/: API.md  ARCHITECTURE.md  DIAGNOSTIC.md  OPERATIONS.md  SECURITY.md  SETUP.md
scripts/: build.sh
wordpress/ce-ia-auditor/: ce-ia-auditor.php  readme.txt  uninstall.php
wordpress/ce-ia-auditor/assets/: admin.css
wordpress/ce-ia-auditor/includes/: class-ceia-activator.php  class-ceia-admin.php  class-ceia-github.php  class-ceia-notifications.php  class-ceia-plugin.php  class-ceia-publisher.php  class-ceia-quality.php  class-ceia-repository.php  class-ceia-rest-controller.php  class-ceia-scope-controls.php  class-ceia-security.php
worker/: README.md  pyproject.toml
worker/ceia_worker/: __init__.py  browser.py  cli.py  config.py  content_audit.py  http.py  models.py  pipeline.py  prompting.py  research.py  retrieval.py  tavily.py  validation.py  wordpress.py
worker/ceia_worker/providers/: __init__.py  base.py  gemini.py
worker/tests/: test_browser.py  test_gemini_provider.py  test_models.py  test_pipeline.py  test_plugin_static.py  test_research.py  test_retrieval.py  test_scope_and_repair.py  test_validation.py  test_wordpress_scope_controls.py
