[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ceia-worker"
version = "0.10.2"
description = "Trabajador gratuito de investigación para CE-IA Auditor de Trámites"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-2.0-or-later"}
authors = [{name = "Consejo de Estudiantes de la Universidad de Oviedo"}]
dependencies = [
  "google-genai==1.75.0",
  "pydantic==2.13.4",
  "pypdf==6.14.2",
]

[project.optional-dependencies]
dev = ["pytest>=8,<10"]

[project.scripts]
ceia-worker = "ceia_worker.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ceia_worker*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
